[project]
name = "code-sentinel"
version = "0.1.0"
description = ""
authors = [
    {name = "neko629"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "langchain (>=1.2.6,<2.0.0)",
    "langchain-openai (>=1.1.7,<2.0.0)",
    "langgraph (>=1.0.6,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.13,<0.15.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.ruff]
# 设置行宽 (Python 建议 88 或 120)
line-length = 88
# 目标 Python 版本
target-version = "py313"

[tool.ruff.lint]
# 启用常见规则:
# E: pycodestyle errors
# W: pycodestyle warnings
# F: Pyflakes
# I: isort (自动导入排序)
# B: flake8-bugbear (发现潜在 bug)
select = ["E", "W", "F", "I", "B"]

# 忽略某些规则 (如果需要)
ignore = []

[tool.ruff.format]
quote-style = "double"
